@@ -25,7 +25,6 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import java.lang.reflect.Field;
-import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
@@ -67,14 +66,13 @@ class DefaultElementLocatorTest {
     final By by = new ByIdOrName("list");
     final WebElement element1 = mock(WebElement.class, "webElement1");
     final WebElement element2 = mock(WebElement.class, "webElement2");
-    final List<WebElement> list = Arrays.asList(element1, element2);
 
-    when(driver.findElements(by)).thenReturn(list);
+    when(driver.findElements(by)).thenReturn(List.of(element1, element2));
 
     ElementLocator locator = newLocator(driver, f);
     List<WebElement> returnedList = locator.findElements();
 
-    assertThat(returnedList).isEqualTo(list);
+    assertThat(returnedList).containsExactly(element1, element2);
   }
 
   @Test
@@ -100,7 +98,7 @@ class DefaultElementLocatorTest {
     final By by = new ByIdOrName("cachedList");
     final WebElement element1 = mock(WebElement.class, "webElement1");
     final WebElement element2 = mock(WebElement.class, "webElement2");
-    final List<WebElement> list = Arrays.asList(element1, element2);
+    final List<WebElement> list = List.of(element1, element2);
 
     when(driver.findElements(by)).thenReturn(list);
 
@@ -134,7 +132,7 @@ class DefaultElementLocatorTest {
     final By by = new ByIdOrName("list");
     final WebElement element1 = mock(WebElement.class, "webElement1");
     final WebElement element2 = mock(WebElement.class, "webElement2");
-    final List<WebElement> list = Arrays.asList(element1, element2);
+    final List<WebElement> list = List.of(element1, element2);
 
     when(driver.findElements(by)).thenReturn(list);
 
@@ -165,7 +163,7 @@ class DefaultElementLocatorTest {
     final By by = By.id("foo");
     final WebElement element1 = mock(WebElement.class, "webElement1");
     final WebElement element2 = mock(WebElement.class, "webElement2");
-    final List<WebElement> list = Arrays.asList(element1, element2);
+    final List<WebElement> list = List.of(element1, element2);
 
     when(driver.findElements(by)).thenReturn(list);
 
