@@ -58,7 +58,6 @@ import com.google.common.collect.Sets;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 import java.util.regex.Pattern;
@@ -249,15 +248,14 @@ class ExpectedConditionsTest {
 
   @Test
   void waitingForVisibilityOfAllElementsLocatedByReturnsListOfElements() {
-    List<WebElement> webElements = singletonList(mockElement);
     String testSelector = "testSelector";
 
-    when(mockDriver.findElements(By.cssSelector(testSelector))).thenReturn(webElements);
+    when(mockDriver.findElements(By.cssSelector(testSelector))).thenReturn(List.of(mockElement));
     when(mockElement.isDisplayed()).thenReturn(true);
 
     List<WebElement> returnedElements =
         wait.until(visibilityOfAllElementsLocatedBy(By.cssSelector(testSelector)));
-    assertThat(returnedElements).isEqualTo(webElements);
+    assertThat(returnedElements).containsExactly(mockElement);
   }
 
   @Test
@@ -300,11 +298,10 @@ class ExpectedConditionsTest {
 
   @Test
   void waitingForVisibilityOfAllElementsReturnsListOfElements() {
-    List<WebElement> webElements = singletonList(mockElement);
     when(mockElement.isDisplayed()).thenReturn(true);
 
-    List<WebElement> returnedElements = wait.until(visibilityOfAllElements(webElements));
-    assertThat(returnedElements).isEqualTo(webElements);
+    List<WebElement> returnedElements = wait.until(visibilityOfAllElements(List.of(mockElement)));
+    assertThat(returnedElements).containsExactly(mockElement);
   }
 
   @Test
@@ -767,7 +764,7 @@ class ExpectedConditionsTest {
   void waitingForSpecificNumberOfElementsMoreThanSpecifiedPositive() {
     String testSelector = "testSelector";
     when(mockDriver.findElements(By.cssSelector(testSelector)))
-        .thenReturn(Arrays.asList(mockElement, mockElement));
+        .thenReturn(List.of(mockElement, mockElement));
     assertThat(wait.until(numberOfElementsToBeMoreThan(cssSelector(testSelector), 1))).hasSize(2);
   }
 
@@ -775,7 +772,7 @@ class ExpectedConditionsTest {
   void waitingForSpecificNumberOfElementsLessThanSpecifiedWhenNumberIsEqual() {
     String testSelector = "testSelector";
     when(mockDriver.findElements(By.cssSelector(testSelector)))
-        .thenReturn(Arrays.asList(mockElement, mockElement));
+        .thenReturn(List.of(mockElement, mockElement));
     assertThatExceptionOfType(TimeoutException.class)
         .isThrownBy(
             () -> wait.until(numberOfElementsToBeLessThan(By.cssSelector(testSelector), 2)));
@@ -793,7 +790,7 @@ class ExpectedConditionsTest {
   void waitingForSpecificNumberOfElementsPositive() {
     String testSelector = "testSelector";
     when(mockDriver.findElements(By.cssSelector(testSelector)))
-        .thenReturn(Arrays.asList(mockElement, mockElement));
+        .thenReturn(List.of(mockElement, mockElement));
     assertThat(wait.until(numberOfElementsToBe(cssSelector(testSelector), 2))).hasSize(2);
   }
 
